--- a/package.json
+++ b/package.json
@@ -6,5 +6,12 @@
   "repository": "https://github.com/ethcrawford/wrapping-paper",
   "author": "Ethan Crawford <ethcrawford@gmail.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "build": "webpack"
+  },
+  "devDependencies": {
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.0"
+  }
 }
