--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "webpack --env development",
+    "start": "webpack-dev-server --env development",
     "build": "webpack"
   },
   "devDependencies": {
     "webpack": "^4.28.3",
-    "webpack-cli": "^3.2.0"
+    "webpack-cli": "^3.2.0",
+    "webpack-dev-server": "^3.1.14"
   }
 }
