--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "webpack"
   },
   "devDependencies": {
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.28.3",
