--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "build": "webpack"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
     "autoprefixer": "^9.4.4",
+    "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
@@ -39,5 +42,10 @@
     "Safari >= 9",
     "Android >= 4.4",
     "Opera >= 30"
-  ]
+  ],
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  }
 }
