--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nougat",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Stub project with Webpack configuration to develop a simple static interface.",
   "repository": "https://github.com/ethcrawford/nougat",
   "author": "Ethan Crawford <ethcrawford@gmail.com>",
@@ -34,7 +34,8 @@
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
-    "webpack-manifest-plugin": "^2.0.4"
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-spritesmith": "^1.0.0"
   },
   "browserslist": [
     ">= 1%",
