--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nougat",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "Stub project with Webpack configuration to develop a simple static interface.",
   "repository": "https://github.com/ethcrawford/nougat",
   "author": "Ethan Crawford <ethcrawford@gmail.com>",
@@ -30,6 +30,7 @@
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "svg-sprite-loader": "^4.1.3",
     "terser-webpack-plugin": "^1.2.1",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
