--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nougat",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "Stub project with Webpack configuration to develop a simple static interface.",
   "repository": "https://github.com/ethcrawford/nougat",
   "author": "Ethan Crawford <ethcrawford@gmail.com>",
@@ -23,6 +23,12 @@
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "imagemin": "^6.1.0",
+    "imagemin-gifsicle": "^6.0.1",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^6.0.0",
+    "imagemin-svgo": "^7.0.0",
+    "img-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
